# inventory-dss-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/bootstrap/: routers.py
app/modules/admin/application/: dtos.py
app/modules/admin/domain/: __init__.py  entities.py  exceptions.py  repositories.py
app/modules/admin/presentation/: dependencies.py  router.py  schemas.py
app/modules/audit/application/: dtos.py
app/modules/audit/domain/: __init__.py  entities.py  exceptions.py  repositories.py
app/modules/audit/presentation/: activity_router.py  dependencies.py  router.py  schemas.py
app/modules/auth/application/: dtos.py
app/modules/auth/presentation/: dependencies.py  router.py  schemas.py
app/modules/billing/application/: dtos.py
app/modules/billing/domain/: __init__.py  entities.py  enums.py  exceptions.py  (+1 more)
app/shared/domain/: errors.py  value_objects.py
app/shared/infrastructure/: ports.py
app/shared/presentation/: deps.py  health_router.py  schemas.py  system_router.py
docs/: decisiones.md  guia-funcional.md
migrations/: env.py
migrations/versions/: 1719d003fd4e_core_modules.py  937a5714bf80_deferred_modules.py  fab1f14dc569_auth_companies.py
tests/: test_admin.py  test_audit.py  test_auth_companies.py  test_billing.py  test_block2_modules.py  test_dashboard.py  test_data_preparation_pipeline.py  test_domain_purity.py  test_domain_units.py  test_dss_intelligence.py  test_files.py  test_notifications.py  test_reports.py  test_validation.py
(+223 files in other folders)
